# ftml

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml
ftml/: __main__.py  data.py  eval.py  experiment.py  model.py  settings.py  train.py
ftml/agent/: evaluator.py  orchestrator.py  researcher.py  signatures.py
ftml/agent/optimize/: examples.json  metrics.py  run.py
ftml/agent/tools/: __init__.py  hardware.py  hf_hub.py
ftml/cli/: app.py
ftml/slack/: app.py  formatters.py  handlers.py  progress.py
tests/: conftest.py  test_agent_orchestrator.py  test_agent_tools.py  test_data.py  test_eval.py  test_experiment.py  test_model.py  test_settings.py  test_slack_formatters.py  test_slack_handlers.py  test_train.py
